@@ -211,11 +211,15 @@ extern int	backendGetDeviceID(int fd, char *device_id, int device_id_size,
 				   const char *scheme, char *uri, int uri_size);
 extern int	backendGetMakeModel(const char *device_id, char *make_model,
 			            int make_model_size);
-extern ssize_t	backendRunLoop(int print_fd, int device_fd, int use_bc,
-		               void (*side_cb)(int print_fd, int device_fd,
-			                       int use_bc));
+extern void	backendNetworkSideCB(int print_fd, int device_fd, int snmp_fd,
+		                     http_addr_t *addr, int use_bc);
+extern ssize_t	backendRunLoop(int print_fd, int device_fd, int snmp_fd,
+		               http_addr_t *addr, int use_bc,
+			       void (*side_cb)(int print_fd, int device_fd,
+					       int snmp_fd, http_addr_t *addr,
+					       int use_bc));
 extern int	backendSNMPSupplies(int snmp_fd, http_addr_t *addr,
-		                    int *printer_state);
+		                    int *page_count, int *printer_state);
 
 #  ifdef __cplusplus
 }
