@@ -1,8 +1,10 @@
-CHANGES.txt - 2008-02-22
+CHANGES.txt - 2008-02-25
 ------------------------
 
 CHANGES IN CUPS V1.4b1
 
+	- The network backends (ipp, lpd, socket) now support
+	  SNMP-based supply and page count monitoring (STR #1655)
 	- The lppasswd program is no longer installed setuid to
 	  root to make the default installation more secure.
 	- Added a new ppdLocalizeMarkerName() function to get
